[metadata]
# replace with your username:
name = prembly
version = 1.1.1
url = https://github.com/samkayz/teamapt-monnify.git
author = Samson Ilemobayo
author_email = general@myidentitypass.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Prembly Python Library
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6